# tock-ansible

./: .ansible-lint  .gitignore  Dockerfile  README.md  ansible.cfg  install-requirements.sh  main.yml  molecule.sh  pyproject.toml  requirements.yml  run.sh
group_vars/: tock.yml
host_vars/: molecule-docker.yml  prod.yml
inventory/: prod.local.dist
inventory/local/: hosts
inventory/local/groups_vars/: tock.yml
inventory/prod/: hosts.dist
inventory/prod/group_vars/: tock.yml
molecule/default/: converge.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
roles.internal/tock/: README.md
roles.internal/tock/defaults/: main.yml
roles.internal/tock/tasks/: main.yml
roles.internal/tock/templates/: docker-compose.yml.j2  mongo_url.j2
roles.internal/tock/vars/: main.yml
roles/docker/: README.md
roles/docker/defaults/: main.yml
roles/docker/meta/: main.yml
roles/docker/tasks/: main.yml  setup-Debian.yml
roles/docker/vars/: Debian.yml
roles/tock/defaults/: main.yml
roles/tock/meta/: main.yml
roles/tock/tasks/: main.yml
roles/tock/templates/: docker-compose-test.yml.j2  docker-compose.yml.j2  mongo_url.j2
roles/tock/vars/: main.yml
