[tool.poetry]
name = "tock-ansible"
version = "0.1.0"
description = "Ansible project for installing tock with docker-compose."
authors = ["Christopher LOUËT"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
ansible-core = "^2.15.3"
ansible-lint = { version = "^6.18.0", markers = "platform_system != 'Windows'" }
jmespath = "^1.0.1"
ruamel-yaml-clib ="^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
