[tool.poetry]
name = "tock-ansible"
version = "0.1.0"
description = "Ansible project for installing tock with docker-compose."
authors = ["Christopher LOUËT"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.15.3"
ansible-lint = { version = "^6.18.0", markers = "platform_system != 'Windows'" }
jmespath = "^1.0.1"
molecule = "^6.0.2"
molecule-plugins = {extras = ["docker"], version = "^23.5.0"}
docker = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
